# learning-git

./: CMakeLists.txt  main.cpp
lib/imgui/: CMakeLists.txt
lib/mymath/: CMakeLists.txt  mymath.cpp
src/: main.cpp
src/mymath/: CMakeLists.txt  mymath.hpp
